src/test/ui/nll/issue-50716.stderr
error: free region `'a` does not outlive free region `'static`
  --> $DIR/issue-50716.rs:25:14
   |
LL |     let _x = *s; //~ ERROR free region `'a` does not outlive free region `'static`
   |              ^^

error: aborting due to previous error

